# voice-asistant-python

./: .gitignore  Dockerfile.deploy  README.es.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: main.py  prompts.py
src/core/settings/: __init__.py  base.py
src/core/utils/: environment.py
